tests/error/poly_errors/non_linear2.err
Error: Not defined for linear argument (at $FILE:16:4)
   | 
14 | @guppy
15 | def main() -> None:
16 |     foo(h)
   |     ^^^^^^ Cannot instantiate copyable type parameter `T` in type
   |            `forall T. (T -> T) -> None` with non-copyable type `qubit`

Guppy compilation failed due to 1 previous error
